--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,19 +9,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -30,4 +25,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.darkmode{
+  background-color: black;
+  color: white;
 }
